.logs/live_combined_20251026-120455.log
==> /home/dzoan/credit-appraisal-agent-poc/.logs/api_20251026-120455.log <==

==> /home/dzoan/credit-appraisal-agent-poc/.logs/ui_20251026-120455.log <==

==> /home/dzoan/credit-appraisal-agent-poc/.logs/api_20251026-120455.log <==
INFO:     Will watch for changes in these directories: ['/home/dzoan/credit-appraisal-agent-poc/services/ui']
INFO:     Uvicorn running on http://0.0.0.0:8090 (Press CTRL+C to quit)
INFO:     Started reloader process [187689] using WatchFiles

==> /home/dzoan/credit-appraisal-agent-poc/.logs/ui_20251026-120455.log <==

  You can now view your Streamlit app in your browser.

  URL: http://0.0.0.0:8502


==> /home/dzoan/credit-appraisal-agent-poc/.logs/api_20251026-120455.log <==
INFO:     Started server process [187699]
INFO:     Waiting for application startup.
INFO:     Application startup complete.

==> /home/dzoan/credit-appraisal-agent-poc/.logs/ui_20251026-120455.log <==
2025-10-26 12:05:03.744 Script compilation error
Traceback (most recent call last):
  File "/home/dzoan/credit-appraisal-agent-poc/.venv/lib/python3.10/site-packages/streamlit/runtime/scriptrunner/script_runner.py", line 571, in _run_script
    code = self._script_cache.get_bytecode(script_path)
  File "/home/dzoan/credit-appraisal-agent-poc/.venv/lib/python3.10/site-packages/streamlit/runtime/scriptrunner/script_cache.py", line 74, in get_bytecode
    bytecode = compile(  # type: ignore
  File "/home/dzoan/credit-appraisal-agent-poc/services/ui/app.py", line 25
    from __future__ import annotations
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: from __future__ imports must occur at the beginning of the file
2025-10-26 12:05:03.746 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.

==> /home/dzoan/credit-appraisal-agent-poc/.logs/api_20251026-120455.log <==
INFO:     Shutting down

==> /home/dzoan/credit-appraisal-agent-poc/.logs/ui_20251026-120455.log <==
  Stopping...

==> /home/dzoan/credit-appraisal-agent-poc/.logs/api_20251026-120455.log <==
INFO:     Waiting for application shutdown.
INFO:     Application shutdown complete.
INFO:     Finished server process [187699]
INFO:     Stopping reloader process [187689]
